xmoto-web-api/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: xmoto-web-api

spec:
  replicas: 1
