xmoto-web-api/overlays/staging/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: xmoto-web-api-route-staging
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"

spec:
  parentRefs:
    - name: main
      namespace: gateway

  hostnames:
    - api-staging.xmoto.org

  rules:
    - backendRefs:
      - name: xmoto-web-api
        port: 80
